feat: adiciona responsividade e corrige layout

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,8 @@
     <title>React App</title>
     <style>
       body {
-        background-image: url('imagens/background2.jpg'); /* Substitua pelo caminho da sua imagem */
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed; /* Efeito parallax */
         color: white;
+        background-color: black;
       }
     </style>
   </head>
