--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,16 @@
     <title>React App</title>
     <style>
       body {
-        color: white;
-        background-color: black;
-      }
-    </style>
+        color: black;
+        background-color: white;
+        /* background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20240715/pngtree-blue-hexagon-luxury-gradient-gold-modern-abstract-design-background-image_15922134.jpg'); */
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
+        background-size: cover;
+      }   
+        </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
