--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <style>
       body {
         color: black;
-        background-color: black;
+        background-color: withe;
         /* background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20240715/pngtree-blue-hexagon-luxury-gradient-gold-modern-abstract-design-background-image_15922134.jpg'); */
         background-size: 100%;
         background-repeat: no-repeat;
